--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Facebook - login or sign up</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap">
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 
