--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap">
-    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
     <main>
         <div class="row">
             <div class="col-logo">
-                <img src="./Images/fb_logo.svg" alt="logo">
+                <img src="Images/fb_logo.svg" alt="logo">
                 <h2>Facebook helps you connect and share with the people in your life.</h2>
             </div>
 
